Fri Jun 21 07:34:47 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_profile_record::oldgen_objects): added.

	* gc.c (gc_profile_dump_on): print the following information:
	  * Living object counts
	  * Free object counts
	  If RGENGC_PROFILE > 0 then
	  * Oldgen object counts
	  * Remembered normal object counts
	  * Remembered shady object counts

Fri Jun 21 06:43:59 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_ull2big): Refactored.
	  (rb_uint2big): Useless code removed.

Fri Jun 21 05:37:39 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_prof_sweep_timer_stop): accumulate sweep time only when
	  record->gc_time > 0.

Fri Jun 21 00:37:31 2013  Tanaka Akira  <akr@fsij.org>

	* ext/bigdecimal: Workaround fix for bigdecimal test failures caused
	  by [ruby-dev:47413] [Feature #8509]

	* ext/bigdecimal/bigdecimal.h (BDIGIT): Make it independent from the
	  definition for bignum.c.
	  (SIZEOF_BDIGITS): Ditto.
	  (BDIGIT_DBL): Ditto.
	  (BDIGIT_DBL_SIGNED): Ditto.
	  (PRI_BDIGIT_PREFIX): Undefine the definition.
	  (PRI_BDIGIT_DBL_PREFIX): Ditto.

	* ext/bigdecimal/bigdecimal.c (RBIGNUM_ZERO_P): Use rb_bigzero_p.
	  (bigzero_p): Removed.
	  (is_even): Use rb_big_pack.

Thu Jun 20 22:52:42 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigmul1_toom3): Don't call bignorm twice.

Thu Jun 20 22:49:27 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bignorm): Don't call bigtrunc if the result is a fixnum.

Thu Jun 20 22:29:42 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_uint2big): Refactored.

Thu Jun 20 22:24:41 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (dump_bignum): Use SIZEOF_BDIGITS.

Thu Jun 20 22:22:46 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2ulong): Change the return type to unsigned long.
	  (rb_big2ulong_pack): Follow the above change.
	  (rb_big2long): Ditto.
	  (rb_big_lshift): Ditto.
	  (rb_big_rshift): Ditto.
	  (rb_big_aref): Ditto.

Thu Jun 20 22:02:46 2013  Tanaka Akira  <akr@fsij.org>
